// Copyright (c) 2018-present,  NebulaChat Studio (https://nebula.chat).
//  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Author: Benqi (wubenqi@gmail.com)

syntax="proto2";
import "google/protobuf/descriptor.proto";

package brpc;
option java_package="com.brpc";
option java_outer_classname="Options";

message MTProtoMeta {
  optional int64  auth_key_id    = 1;
  optional int64  session_id     = 2;
  optional int64  message_id     = 3;
  optional int32  layer          = 4;
  optional int32  user_id        = 5;
  optional int64  access_hash    = 6;
  optional int32  server_id      = 7;
  optional int64  client_conn_id = 8;
  optional string client_addr    = 9;
  optional string from           = 10;
  optional int64  receive_time   = 11;
}
